@@ -1,3 +1,10 @@
+2002-11-12  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSUserDefaults.m: Try again ... get
+	([-setVolatileDomain:forName:]) and ([-setPersistentDomain:forName:])
+	to conform to both the OpenStep standard and the current MacOS-X
+	documentation.
+
 2002-11-11  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSString.m: adocument property list stuff.
